--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,9 @@
 /*$blue: #056ef0;*/
-:global body {
-  background: #ececec!important;
+:global {
+  body {
+    background: #ececec!important;
+  }
+  #root, [data-reactroot] {
+    height: 100%;
+  }
 }
-/*@import '~antd/dist/antd.css'*/
-/*@import './App.css'*/
