:sparkles: add add-topic page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 :global {
   body {
     background: #ececec!important;
+    min-width: 1000px;
   }
   #root, [data-reactroot] {
     height: 100%;
