--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -1,6 +1,6 @@
 .title {
   display: flex;
-  padding: 16px 0px;
+  padding: 12px 0px;
   min-height: 70px;
   align-items: center;
   border-bottom: 1px solid #ddd;
@@ -15,6 +15,7 @@
 
   &__content {
     line-height: 20px;
+    flex: 1;
   }
 
 }
