--- a/src/pages/account/index.css
+++ b/src/pages/account/index.css
@@ -1,5 +1,10 @@
 .account-list {
   &__add-button {
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    & > div {
+      width: 100%;
+      margin-right: 20px;
+    }
   }
 }
