:construction: save attributes

--- a/src/pages/attributes/index.css
+++ b/src/pages/attributes/index.css
@@ -1,5 +1,28 @@
 :global(.ant-tree li .ant-tree-node-content-wrapper) {
   width: calc(100% - 18px);
+
+}
+
+:global {
+  .vertical-center-modal {
+    text-align: center;
+    white-space: nowrap;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
+      width: 0;
+    }
+
+    & .ant-modal {
+      display: inline-block;
+      vertical-align: middle;
+      top: 0;
+      text-align: left;
+    }
+  }
 }
 
 .tree {
@@ -9,5 +32,11 @@
     & > span {
       line-height: 22px;
     }
+  }
+}
+
+.attributes {
+  &__add-button {
+    text-align: right;
   }
 }
