--- a/src/pages/commodity/components/create-attributes-plane.css
+++ b/src/pages/commodity/components/create-attributes-plane.css
@@ -1,10 +1,18 @@
 .attribute-row {
   display: flex;
 
+  :global(input) {
+    width: 100px;
+    margin-right: 8px;
+    margin-bottom: 8px;
+  }
+
   &__left {
     width: 100px;
+    margin-right: 8px;
   }
   &__right {
-    width: 100px;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
