:sparkles: complete classes

--- a/src/pages/classes/index.css
+++ b/src/pages/classes/index.css
@@ -1,8 +1,7 @@
-.list {
-  &__item {
-    &--active {
-      background-color: blue;
-      color: #fff;
-    }
-  }
+.view {
+  display: flex;
+}
+
+.title-single-button {
+  text-align: right;
 }
