--- a/src/pages/classes/classes.css
+++ b/src/pages/classes/classes.css
@@ -1,13 +1,37 @@
 .tree {
   display: flex;
   margin-top: 10px;
-  
+
   &__list {
     display: block;
-    min-width: 300px;
+    min-width: 250px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
     border-radius: 2px;
     background-color: #fff;
     margin: 5px;
+    overflow: hidden;
+  }
+}
+
+.view {
+  display: flex;
+}
+
+.attr {
+  padding: 50px 0;
+
+  &__image {
+    width: 250px;
+    height: 250px;
+    margin: 0 auto 50px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__content {
+    padding: 5px 50px;
   }
 }
