--- a/src/components/requisition/css/original.css
+++ b/src/components/requisition/css/original.css
@@ -1,4 +1,4 @@
-.original_box {
+.main {
   padding: 0 10px;
   .title {
     font-size: 16px;
@@ -9,14 +9,14 @@
     align-items: center;
   }
   .inputTitle {
-    width: 60px;
+    width: 80px;
     text-align: right;
     display: inline-block;
     margin-right: 5px;
-
   }
   .flex {
     display: flex;
+    align-items: center;
   }
   .originImg {
     width: 150px;
