:art: change card style

--- a/src/pages/tags/tags.css
+++ b/src/pages/tags/tags.css
@@ -24,3 +24,12 @@
 .left {
   margin-left: 10px;
 }
+
+:global {
+  .ant-card-extra {
+    right: 5px;
+  }
+  .ant-card-head {
+    padding: 0 12px;
+  }
+}
