--- a/src/pages/commodity/create.css
+++ b/src/pages/commodity/create.css
@@ -24,3 +24,14 @@
     margin-bottom: 8px;
   }
 }
+.commodity-content-edit__editor {
+  height: 500px!important;
+}
+.commodity-content-edit__wrapper {
+  height: 600px!important;
+}
+:global {
+  [data-contents="true"] {
+    padding-bottom: 25px;
+  }
+}
