:lipstick: optimize home settings page style

--- a/src/components/home/box.css
+++ b/src/components/home/box.css
@@ -44,6 +44,11 @@
   .home__recommended-item {
     width: 250px;
     height: 330px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+    }
   }
   .home-box__content-box {
     overflow: hidden;
