:sparkles: finish mobile home settings page style

--- a/src/pages/home/components/mobile/common-trends.css
+++ b/src/pages/home/components/mobile/common-trends.css
@@ -1,5 +1,5 @@
 :global {
-  .goods-topic {
+  .common-trends {
     margin-top: 16px;
     padding: 9px 15px 14px;
     background: #fff;
@@ -9,11 +9,6 @@
       width: auto;
       margin-top: 10px;
       overflow-x: scroll;
-    }
-
-    &__card {
-      flex-shrink: 0;
-      margin-right: 9px;
     }
   }
 }
