--- a/src/pages/enquiry/components/offer-card/index.css
+++ b/src/pages/enquiry/components/offer-card/index.css
@@ -3,6 +3,7 @@
   border: 1px solid #333;
 
   &__header {
+    position: relative;
     padding: 8px;
     background: #ddd;
   }
@@ -11,5 +12,17 @@
   }
   &__content {
     padding: 8px;
+  }
+  &__close {
+    position: absolute;
+    font-size: 24px;
+    top: 6px;
+    right: 6px;
+    transition: all .3s ease;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.3);
+    }
   }
 }
