--- a/src/pages/home/components/mobile/common-trends.css
+++ b/src/pages/home/components/mobile/common-trends.css
@@ -6,6 +6,7 @@
 
     &__content {
       display: flex;
+      /* flex-wrap: wrap; */
       width: auto;
       margin-top: 10px;
       overflow-x: scroll;
