--- a/src/pages/enquiry/components/offer-card/index.css
+++ b/src/pages/enquiry/components/offer-card/index.css
@@ -13,6 +13,17 @@
   &__content {
     padding: 8px;
   }
+  &__image-field {
+    display: flex;
+  }
+  &__image-box {
+    width: 150px;
+    margin-right: 8px;
+
+    img {
+      width: 100%;
+    }
+  }
   &__close {
     position: absolute;
     font-size: 24px;
