--- a/src/pages/home/components/mobile/goods-topic-card.css
+++ b/src/pages/home/components/mobile/goods-topic-card.css
@@ -2,13 +2,28 @@
   .goods-topic-card {
     position: relative;
     width: 106px;
+    height: 140px;
+    flex-shrink: 0;
+    margin-right: 9px;
 
-    img {
+    &__backgroud {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
+      height: 100%;
+      border-radius: 4px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
     }
 
     &__title {
       color: #444;
+      margin-bottom: 3px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &__wrapper {
