--- a/src/pages/home/components/mobile/latest-card.css
+++ b/src/pages/home/components/mobile/latest-card.css
@@ -1,7 +1,10 @@
 :global {
   .latest-card {
     position: relative;
+    height: 180px;
     margin-bottom: 10px;
+    flex-shrink: 0;
+
 
     &__wrapper {
       position: absolute;
@@ -23,10 +26,16 @@
     &__introduce-title {
       padding-top: 6px;
       font-size: 11px;
+      color: #444;
       text-align: center;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &__attributes-box {
+      display: flex;
+      justify-content: center;
       margin-top: 5px;
       text-align: center;
       font-size: 8px;
@@ -37,13 +46,30 @@
       }
     }
 
+    &__tags {
+      max-width: 200px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
     &__date {
       margin-left: 17px;
     }
 
-    img {
-      display: block;
+    &__background {
+      position: absolute;
       width: 100%;
+      height: 180px;
+      top: 0;
+      left: 0;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 }
